
http://www.packetfence.org/support/community.html

This is a list of noteworthy changes across releases. 
For more details and developer visible changes see the ChangeLog file.
For a list of compatibility related changes see the UPGRADE file.


--------------------------------------------------------------------------------
Version <release> - <codename> released on <releaseDate>

Enhancements
- New DHCP fingerprint for Cisco SPA series IP Phone
- DHCP fingerprints sharing now allows submitter to send computer name, user-
  agent and a contact email to help us identify the devices better (#983)

Bug Fixes
- Wired 802.1X and MAC Authentication fixes in Network Devices Guide
- Fixed an issue with pfcmd-initiated VLAN re-evaluation if you assign VLANs 
  based on a client's connection-type (which is not the default)
- Fixed DHCP fingerprint sharing upload form

Translations
- New German (de) translation (Thanks to Tino Matysiak of Meetyoo Conferencing)

--------------------------------------------------------------------------------
Version 2.1.0 released on 2011-03-03

New Hardware Support
- Added Avaya as rebranded Nortel's
- Support for Nortel's ERS5500 with firmware 6.x
- 802.1X support with or without VoIP for Cisco 2950

New Features
- New configuration validation interface in Web Admin and with "pfcmd checkup"
- javascript-based network access detection (experimental)
- JSON bindings for node information (experimental)

Enhancements
- Improvements to our Nortel support
- Developer documentation update
- Friendlier startup error messages
- More configuration validation on startup and in 'pfcmd checkup' (#1025, 
  #1193)
- Improved support for Desktop Linux clients (#1188)
- New DHCP fingerprints for Cisco, UniData and Nortel IP Phones, Cisco Small 
  Business switch, Netgear router, Generic Linux, Gentoo, Meego, LaCie NAS, 
  Xyratex NAS, iPod/iPad, Samsung, LG, Sony Ericsson and Sharp smartphones, 