@@ -16,6 +16,9 @@ For a list of compatibility related changes see the UPGRADE file.
 --------------------------------------------------------------------------------
 Version <release> - <codename> released on <releaseDate>
 
+New Hardware Support
+- Motorola RF Switches (Wireless Controllers)
+
 Enhancements
 - New DHCP fingerprint for Cisco SPA series IP Phone
 - DHCP fingerprints sharing now allows submitter to send computer name, user-
@@ -26,6 +29,8 @@ Bug Fixes
 - Fixed an issue with pfcmd-initiated VLAN re-evaluation if you assign VLANs 
   based on a client's connection-type (which is not the default)
 - Fixed DHCP fingerprint sharing upload form
+- Fixed Web Admin which referred to an inexistent Meru MC3000 module (it was 
+  renamed Meru::MC in 2.0.1)
 
 Translations
 - New German (de) translation (Thanks to Tino Matysiak of Meetyoo Conferencing)
